gtkpod V0.53-CVS
	IMPROVEMENT: handle adding of playlist files containing relative
	files with relative paths.

	BUGFIX: fixed memory holes in sync_songids(), sync_dir_ok().

	BUGFIX: drag and drop URIs with cr/nl at the end are handled
	correctly (thanks to Walter Bell).

gtkpod V0.52
	NEW FEATURE: Supports Playcounts, Ratings, Time Last Played /
	Time Last Modified. The playcounts and ratings are read from the
	'Play Count' file produced by iPod's firmware versions V1.3
	(playcounts only) and V2.0 (playcounts and rating).

	NEW FEATURE: If you mark several songs and change a tag in the
	first one, the corresponding tag in the other songs will be
	changed as well (must activate in the prefs menu). Patch provided
	by Ramesh Dharan. Thanks!

	IMPROVEMENT: added auto-dection of Japanese encoding (thanks
	to Hiroshi Kawashima).

	IMPROVEMENT: option to sort case-sensitively. Case-insensitive
	utf8 sort should work fine, case-sensitive may not work entirely
	as expected with some charsets.

	BUGFIX: display free size correctly even if more than 4294967295
	(or maybe just half that many?) Bytes are free on the iPod.

	BUGFIX: drag-and-drop: gtkpod should now correctly handle files
	with "special" characters (like spaces...) that are escaped in the
	DND URI. (Thanks to Walter Bell).

	BUGFIX: using 'file_export' from the context menu could crash
	context menu

	BUGFIX: file_export didn't remember directory last used.

	BUGFIX: can now choose zero sort tabs in the prefs dialogue
	(instead of the minimum one) -- why didn't anyone tell me?

	BUGFIX: when deleting songs, sometimes adjacent songs got edited
	(took title or artist... of the deleted song). Hopefully fixed --
	please report.

	BUGFIX: after reordering columns in the song view, the selection
	of which columns are to be displayed went haywire -- fixed.

	BUGFIX: fixed memory holes in pm_data_compare_func(),
	st_data_compare_func(), sm_data_compare_func(),
	get_ipod_used_space(), get_ipod_free_space(),