@@ -3874,7 +3874,7 @@
 		      <child>
 			<widget class="GtkLabel" id="label45">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">Command Line for 'Enqueue'</property>
+			  <property name="label" translatable="yes">Command Line for 'Enqueue':</property>
 			  <property name="use_underline">False</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
